Добавляет предварительную версию со сменой цветовой схемы

--- a/source/components/header.html
+++ b/source/components/header.html
@@ -5,9 +5,9 @@
         <img class="page-header__roi-logo" width="180" height="56" src="img/roi-logo.svg" alt="Российская общественная инициатива">
       </a>
 
-      <a class="page-header__link page-header__site-name" href="#">Общественное голосование</a>
+      <a class="page-header__site-name link link--black" href="#">Общественное голосование</a>
 
-      <a class="page-header__link page-header__version-btn page-header__version-btn--bar js-open-popup" href="#">
+      <a class="page-header__version-btn page-header__version-btn--bar link link--black js-open-popup" href="#">
         <svg width="18" height="18">
           <use xlink:href="img/sprite.svg#icon-glasses"></use>
         </svg>
@@ -47,7 +47,7 @@
         </form>
       </div>
 
-      <a class="page-header__link page-header__version-btn page-header__version-btn--menu js-open-popup" href="#">
+      <a class="page-header__version-btn page-header__version-btn--menu link link--black js-open-popup" href="#">
         <svg width="18" height="18">
           <use xlink:href="img/sprite.svg#icon-glasses"></use>
         </svg>
@@ -57,7 +57,7 @@
       <nav class="page-header__user-menu user-menu">
         <div class="user-menu__overlay"></div>
 
-        <button class="user-menu__dropdown-btn" type="button">
+        <button class="user-menu__dropdown-btn link link--black" type="button">
           <span class="user-menu__dropdown-btn-text visually-hidden">Открыть меню пользователя</span>
 
           <svg class="user-menu__user-icon" width="16" height="16">
@@ -73,15 +73,15 @@
 
         <ul class="user-menu__list">
           <li class="user-menu__item">
-            <a class="page-header__link user-menu__link" href="#">Избранное</a>
+            <a class="user-menu__link link link--black" href="#">Избранное</a>
           </li>
 
           <li class="user-menu__item">
-            <a class="page-header__link user-menu__link" href="#">Моя активность</a>
+            <a class="user-menu__link link link--black" href="#">Моя активность</a>
           </li>
 
           <li class="user-menu__item">
-            <a class="page-header__link user-menu__link" href="#">Выход</a>
+            <a class="user-menu__link link link--black" href="#">Выход</a>
           </li>
         </ul>
       </nav>
