--- a/source/components/special-popup.html
+++ b/source/components/special-popup.html
@@ -33,27 +33,27 @@
         <div class="special-popup__scroll-wrap">
           <ul class="special-popup__list">
             <li class="special-popup__item">
-              <button class="special-popup__btn-color special-popup__btn-color--standard active" type="button" data-item="color">
+              <button class="special-popup__btn-color special-popup__btn-color--standard active" data-property="theme" data-value="default" type="button" data-item="color">
                 <span>Стандартный</span>
               </button>
             </li>
             <li class="special-popup__item">
-              <button class="special-popup__btn-color special-popup__btn-color--inverse" type="button" data-item="color">
+              <button class="special-popup__btn-color special-popup__btn-color--inverse" data-property="theme" data-value="inverse" type="button">
                 <span>Инверсия</span>
               </button>
             </li>
             <li class="special-popup__item">
-              <button class="special-popup__btn-color special-popup__btn-color--blue" type="button" data-item="color">
+              <button class="special-popup__btn-color special-popup__btn-color--blue" data-property="theme" data-value="blue" type="button">
                 <span>Синий</span>
               </button>
             </li>
             <li class="special-popup__item">
-              <button class="special-popup__btn-color special-popup__btn-color--comfort" type="button" data-item="color">
+              <button class="special-popup__btn-color special-popup__btn-color--comfort" data-property="theme" data-value="comfort" type="button">
                 <span>Комфортный</span>
               </button>
             </li>
             <li class="special-popup__item">
-              <button class="special-popup__btn-color special-popup__btn-color--brown" type="button" data-item="color">
+              <button class="special-popup__btn-color special-popup__btn-color--brown" data-property="theme" data-value="brown" type="button">
                 <span>Коричневый</span>
               </button>
             </li>
