--- a/source/sass/blocks/form-checkbox.scss
+++ b/source/sass/blocks/form-checkbox.scss
@@ -10,7 +10,6 @@
   display: flex;
   align-items: flex-start;
   align-self: flex-start;
-  color: $dark-text;
   cursor: pointer;
   transition: all $style-change-duration;
 
@@ -20,7 +19,7 @@
     width: 20px;
     height: 20px;
     margin-right: 8px;
-    background-color: $white;
+    background-color: var(--color-bg-main);
     border-radius: 5px;
     border: 1px solid rgba(161, 167, 174, 0.5);
     transition: all $style-change-duration;
@@ -44,7 +43,7 @@
 .form-checkbox input[type="checkbox"]:not(:checked) ~ label {
   &:hover {
     &::before {
-      border: 1px solid $light-blue-accent;
+      border: 1px solid var(--color-interactive-accent);
     }
   }
 }
@@ -52,7 +51,7 @@
 
 .form-checkbox input[type="checkbox"]:checked ~ label {
   &::before {
-    background-color: $blue-default;
+    background-color: var(--color-interactive-default);
   }
 
   &::after {
