--- a/source/sass/blocks/answers.scss
+++ b/source/sass/blocks/answers.scss
@@ -17,7 +17,6 @@
   margin-bottom: 24px;
 
   @include font-h2;
-  color: $dark-text;
 
   @media (max-width: $desktop-width - 1) {
     margin-bottom: 32px;
@@ -40,7 +39,6 @@
   margin-bottom: 16px;
 
   @include font-h4;
-  color: $dark-text;
 
   &--left {
     width: 740px;
@@ -82,7 +80,6 @@
 
     @include main-text;
     line-height: rem(27px);
-    color: $dark-text;
   }
 }
 
@@ -105,10 +102,6 @@
   margin-right: 16px;
 
   @include main-text;
-  color: $grey-default;
-  text-decoration: none;
-
-  transition: color $style-change-duration;
 
   @media (max-width: $mobile-max-width) {
     margin-right: 0;
@@ -117,11 +110,6 @@
 
   & svg {
     margin-right: 8px;
-  }
-
-  &:hover,
-  &:focus {
-    color: $blue-accent;
   }
 }
 
@@ -135,7 +123,7 @@
 
   & span {
     display: none;
-    color: $dark-text;
+    color: var(--color-text-main);
 
     transition: color $style-change-duration;
 
@@ -163,7 +151,7 @@
     left: 0;
     width: 100%;
     height: 48px;
-    background-image: linear-gradient(180deg, $white 0%, rgba(255, 255, 255, 0) 100%);
+    background-image: linear-gradient(180deg, var(--color-bg-main) 0%, var(--color-bg-main-transparent) 100%);
     transform: matrix(1, 0, 0, -1, 0, 0);
   }
 
@@ -187,10 +175,8 @@
   align-items: center;
 
   @include main-text;
-  color: $blue-default;
 
   cursor: pointer;
-  transition: color $style-change-duration;
 
   & span {
     margin-right: 9px;
@@ -198,15 +184,6 @@
 
   & svg {
     transform: rotate(-90deg);
-  }
-
-  &:hover {
-    color: $blue-accent;
-  }
-
-  &:focus {
-    color: $blue-accent;
-    outline: none;
   }
 }
 
@@ -236,7 +213,6 @@
 
     @include main-text;
     line-height: rem(27px);
-    color: $dark-text;
   }
 
   & span {
@@ -244,7 +220,7 @@
     margin-bottom: 8px;
 
     @include main-text;
-    color: $grey-default;
+    color: var(--color-text-caption);
 
     @media (max-width: $desktop-width - 1) {
       display: block;
@@ -263,7 +239,7 @@
   width: 100%;
   padding: 11px 32px;
   color: $grey-default;
-  background-color: $color-bg;
+  background-color: var(--color-bg-secondary);
   border-radius: 0 0 5px 5px;
 
   background-image: linear-gradient($light-grey, $light-grey);
@@ -294,16 +270,14 @@
   padding-left: 4px;
 
   @include font-h2;
-  color: $grey-default;
+  color: var(--color-text-caption);
 
-  background-color: $color-bg;
   border-radius: 5px;
 
   transition: background-color $style-change-duration;
 
   @media (max-width: $mobile-max-width) {
     @include font-h3;
-    color: $grey-default;
   }
 
   & input[type="text"] {
@@ -311,15 +285,14 @@
     padding: 5px;
 
     @include font-h2;
-    color: $grey-default;
+    color: var(--color-text-caption);
     text-align: right;
     border: none;
-    background-color: $color-bg;
+    background-color: transparent;
     transition: background-color $style-change-duration;
 
     @media (max-width: $mobile-max-width) {
       @include font-h3;
-      color: $grey-default;
     }
 
     &:focus {
@@ -328,18 +301,18 @@
   }
 
   &:hover {
-    background-color: $white;
+    background-color: var(--color-bg-main);
 
     & input[type="text"] {
-      background-color: $white;
+      background-color: var(--color-bg-main);
     }
   }
 
   &--hover {
-    background-color: $white;
+    background-color: var(--color-bg-main);
 
     & input[type="text"] {
-      background-color: $white;
+      background-color: var(--color-bg-main);
     }
   }
 }
@@ -359,7 +332,7 @@
 
     @include caption-text;
     text-align: center;
-    color: $dark-text;
+    color: var(--color-text-main);
   }
 
   [data-tooltip]::before {
@@ -373,7 +346,7 @@
     min-width: 130px;
     padding: 4px 8px;
 
-    color: $dark-text;
+    color: var(--color-text-main);
 
     border-radius: 2px;
     background-color: $light-blue;
