--- a/source/sass/blocks/composite-poll.scss
+++ b/source/sass/blocks/composite-poll.scss
@@ -11,10 +11,10 @@
   margin-bottom: 32px;
 
   @include font-h5;
-  color: $grey-default;
+  color: var(--color-text-caption);
 
   & time {
-    color: $dark-text;
+    color: var(--color-text-main);
     font-weight: 400;
   }
 }
@@ -25,10 +25,9 @@
   padding: 32px;
 
   @include main-text;
-  color: $dark-text;
   line-height: rem(27px);
 
-  background-color: $color-bg;
+  background-color: var(--color-bg-secondary);
   border-radius: 5px;
 
   @media (max-width: $mobile-max-width) {
