--- a/source/sass/blocks/cookie.scss
+++ b/source/sass/blocks/cookie.scss
@@ -6,7 +6,7 @@
 
   width: 100%;
 
-  background-color: $white;
+  background-color: var(--color-bg-main);
   box-shadow: 0 -4px 8px rgba(46, 67, 102, 0.1);
 
   &.js_hide {
@@ -33,7 +33,6 @@
 
   font-size: rem(15px);
   line-height: 1.35;
-  color: $dark-text;
 }
 
 .cookie__text {
@@ -41,7 +40,7 @@
 
   font-size: rem(13px);
   line-height: 1.3;
-  color: $grey;
+  color: var(--color-text-secondary);
 
   @include tablet {
     padding-bottom: 10px;
