--- a/source/sass/blocks/filter.scss
+++ b/source/sass/blocks/filter.scss
@@ -1,7 +1,3 @@
-.filter {
-  color: $dark-text;
-}
-
 .filter__open-btn {
   display: none;
 }
@@ -16,7 +12,6 @@
   font-weight: 400;
   font-size: rem(40px);
   line-height: rem(47px);
-  color: $dark-main;
 
   &--last {
     margin-right: 20px;
@@ -30,8 +25,8 @@
 
 .filter__main {
   padding: 24px 32px;
-  background-color: #f5f6f7;
-  border: 1px solid $light-grey;
+  background-color: var(--color-bg-secondary);
+  border: 1px solid var(--color-stroke);
   border-radius: $border-radius;
 }
 
