--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -2,7 +2,7 @@
   padding-top: 32px;
   padding-bottom: 18px;
 
-  background-image: linear-gradient($light-grey, $light-grey);
+  background-image: linear-gradient(var(--color-stroke), var(--color-stroke));
   background-position: left bottom;
   background-repeat: no-repeat;
   background-size: 100% 1px;
@@ -90,7 +90,6 @@
   margin-bottom: 12px;
 
   @include font-h5;
-  color: $dark-text;
 }
 
 .form__description {
@@ -98,5 +97,5 @@
   margin-bottom: 24px;
 
   @include main-text;
-  color: $grey-default;
+  color: var(--color-text-caption);
 }
