--- a/source/sass/blocks/menu-btn.scss
+++ b/source/sass/blocks/menu-btn.scss
@@ -21,7 +21,7 @@
     height: 21px;
     padding: 0;
     user-select: none;
-    color: $blue-default;
+    color: var(--color-interactive-default);
     background-color: transparent;
     border: none;
     cursor: pointer;
@@ -29,15 +29,15 @@
     transition: color $style-change-duration;
 
     &:focus {
-      color: $blue-accent;
+      color: var(--color-interactive-accent);
     }
 
     &:focus:not(.focus-visible) {
-      color: $blue-default;
+      color: var(--color-interactive-default);
     }
 
     &:active:not(.focus-visible) {
-      color: $blue-accent;
+      color: var(--color-interactive-accent);
     }
 
     &::before,
