--- a/source/sass/blocks/news-notice.scss
+++ b/source/sass/blocks/news-notice.scss
@@ -72,7 +72,7 @@
 .news-notice__item {
   padding-top: 26px;
 
-  border-bottom: 1px solid $light-grey;
+  border-bottom: 1px solid var(--color-stroke);
 
   @media (max-width: $tablet-width - 1) {
     padding-top: 24px;
@@ -89,7 +89,7 @@
 
   font-size: rem(14px);
   line-height: 1.3;
-  color: $grey-default;
+  color: var(--color-text-caption);
 
   &::before {
     content: "";
@@ -135,17 +135,8 @@
     display: block;
 
     text-align: left;
-    color: $dark-text;
-    text-decoration: none;
-
-    transition: color $style-change-duration;
 
     @include font-h5;
-
-    &:hover,
-    &:focus {
-      color: $blue-default;
-    }
   }
 }
 
@@ -153,18 +144,10 @@
   display: block;
   height: 2.7em;
   overflow: hidden;
-
-  text-decoration: none;
   text-overflow: ellipsis;
-
-  transition: color $style-change-duration;
 
   @media (max-width: $desktop-width - 81) {
     height: auto;
-  }
-
-  &:hover {
-    color: $blue-default;
   }
 }
 
