--- a/source/sass/blocks/page-content.scss
+++ b/source/sass/blocks/page-content.scss
@@ -11,20 +11,20 @@
   line-height: rem(23px);
   text-decoration: none;
   user-select: none;
-  color: $grey;
+  color: var(--color-text-secondary);
   outline: none;
   transition: color $style-change-duration;
 
   &:focus {
-    color: $blue-accent;
+    color: var(--color-interactive-accent);
   }
 
   &:focus:not(.focus-visible) {
-    color: $grey;
+    color: var(--color-text-secondary);
   }
 
   &:hover:not(.focus-visible) {
-    color: $blue-accent;
+    color: var(--color-interactive-accent);
   }
 
   svg {
@@ -45,7 +45,6 @@
   font-weight: 400;
   font-size: rem(40px);
   line-height: rem(47px);
-  color: $dark-main;
 }
 
 .page-content .list-btn {
@@ -65,11 +64,11 @@
     margin-bottom: 31px;
 
     &:hover:not(.focus-visible) {
-      color: $grey;
+      color: var(--color-text-secondary);
     }
 
     &:active:not(.focus-visible) {
-      color: $blue-accent;
+      color: var(--color-interactive-accent);
     }
   }
 
