--- a/source/sass/blocks/poll.scss
+++ b/source/sass/blocks/poll.scss
@@ -49,7 +49,7 @@
   padding: 24px;
   padding-bottom: 29px;
 
-  background-color: $color-bg;
+  background-color: var(--color-bg-secondary);
   border-radius: $border-radius;
   cursor: pointer;
 
@@ -72,7 +72,7 @@
     width: 100%;
     height: 40px;
 
-    background-image: linear-gradient(180deg, rgba(249, 249, 250, 1) 0%, rgba(249, 249, 250, 0) 100%);
+    background-image: linear-gradient(180deg, var(--color-bg-secondary) 0%, var(--color-bg-secondary-transparent) 100%);
     transform: matrix(1, 0, 0, -1, 0, 0);
 
     transition: bottom $style-change-duration linear;
@@ -88,11 +88,11 @@
 }
 
 .poll__item--passed {
-  background-color: $white;
-  border: 1px solid $light-grey;
+  background-color: var(--color-bg-main);
+  border: 1px solid var(--color-stroke);
 
   &::before {
-    background-image: linear-gradient(180deg, #ffffff 0%, rgba(255, 255, 255, 0) 100%);
+    background-image: linear-gradient(180deg, var(--color-bg-main) 0%, var(--color-bg-main-transparent) 100%);
   }
 
   &::after {
@@ -105,7 +105,7 @@
 
     font-size: rem(13px);
     line-height: 1.3;
-    color: $grey-default;
+    color: var(--color-text-caption);
 
     background-color: $light-grey;
     border-radius: $border-radius 0;
@@ -114,12 +114,12 @@
 
   &:hover {
     &::before {
-      background: linear-gradient(180deg, rgba(249, 249, 250, 1) 0%, rgba(249, 249, 250, 0) 100%);
+      background-image: linear-gradient(180deg, var(--color-bg-secondary) 0%, var(--color-bg-secondary-transparent) 100%);
     }
   }
 
   & .poll__text {
-    color: $grey-default;
+    color: var(--color-text-caption);
   }
 }
 
@@ -134,7 +134,6 @@
 
   font-size: rem(16px);
   line-height: 1.35;
-  color: $dark-text;
 }
 
 .poll__link {
@@ -148,7 +147,7 @@
   padding-bottom: 14px;
   padding-left: 24px;
 
-  background-image: linear-gradient(rgba(249, 249, 250, 0), $color-bg 35px);
+  background-image: linear-gradient(var(--color-bg-secondary-transparent), var(--color-bg-secondary) 35px);
   border-radius: $border-radius;
 }
 
