--- a/source/sass/blocks/project-item.scss
+++ b/source/sass/blocks/project-item.scss
@@ -10,7 +10,7 @@
     position: absolute;
     top: 0;
     bottom: 0;
-    left: 0;
+    left: -1px;
     width: 3px;
     border-radius: $border-radius;
   }
