--- a/source/sass/blocks/project.scss
+++ b/source/sass/blocks/project.scss
@@ -166,7 +166,7 @@
   width: calc(50% - 4px);
   margin-bottom: 8px;
 
-  background-color: $color-bg;
+  background-color: var(--color-bg-secondary);
   border-radius: $border-radius;
 
   transition: box-shadow $style-change-duration linear;
@@ -185,7 +185,7 @@
     box-shadow: 0 2px 4px rgba(0, 30, 75, 0.15);
 
     .project__name {
-      color: $blue-default;
+      color: var(--color-interactive-default);
     }
   }
 }
@@ -227,7 +227,6 @@
 
   font-size: rem(18px);
   line-height: 1.3;
-  color: $dark-text;
 
   transition: color $style-change-duration linear;
 
@@ -263,9 +262,9 @@
 
   font-size: rem(18px);
   line-height: 1.3;
-  color: $grey-default;
+  color: var(--color-text-caption);
 
-  background-color: $white;
+  background-color: var(--color-bg-main);
   border-radius: 50%;
 }
 
