--- a/source/sass/blocks/special-popup.scss
+++ b/source/sass/blocks/special-popup.scss
@@ -21,7 +21,7 @@
   margin: 0 auto;
   padding: 40px;
 
-  background-color: $white;
+  background-color: var(--color-bg-main);
   border-radius: 0 0 4px 4px;
   box-shadow: 0 4px 15px rgba(46, 67, 102, 0.1);
 
@@ -61,7 +61,7 @@
 
   &:hover {
     svg {
-      stroke: $blue-accent;
+      stroke: var(--color-interactive-accent);
     }
   }
 
@@ -72,7 +72,7 @@
 
     transition: stroke $style-change-duration;
 
-    stroke: $dark-text;
+    stroke: var(--color-text-main);
   }
 }
 
@@ -125,7 +125,7 @@
 
   list-style: none;
 
-  border-bottom: 1px solid $light-grey;
+  border-bottom: 1px solid var(--color-stroke);
 
   @include tablet {
     width: fit-content;
@@ -196,7 +196,7 @@
   height: 44px;
 
   background-color: $light-grey;
-  border: 1px solid $light-grey;
+  border: 1px solid var(--color-stroke);
   border-radius: 4px;
 
   &--S {
@@ -221,7 +221,7 @@
       width: 100%;
       height: 5px;
 
-      background-color: $blue-default;
+      background-color: var(--color-interactive-default);
     }
   }
 }
@@ -234,6 +234,8 @@
   border-radius: 4px;
 
   &.active {
+    border-color: var(--color-text-main);
+
     &::after {
       content: "";
       position: absolute;
@@ -243,7 +245,7 @@
       width: 100%;
       height: 5px;
 
-      background-color: $blue-default;
+      background-color: var(--color-interactive-default);
     }
   }
 
@@ -284,6 +286,8 @@
 }
 
 .special-popup__btn-font {
+  color: inherit;
+
   &.active {
     &::after {
       content: "";
@@ -294,7 +298,7 @@
       width: 100%;
       height: 5px;
 
-      background-color: $blue-default;
+      background-color: var(--color-interactive-default);
     }
   }
 }
