--- a/source/sass/blocks/your-comment.scss
+++ b/source/sass/blocks/your-comment.scss
@@ -18,7 +18,7 @@
   width: 100%;
   height: 389px;
   margin-bottom: 16px;
-  background-color: $color-bg;
+  background-color: var(--color-bg-secondary);
   border-radius: 5px;
 
   @media (max-width: $mobile-max-width) {
